# Neko-Chan

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  pyproject.toml  requirements.txt  sample-config.env  start.sh
.github/: dependabot.yml
.github/workflows/: notify.yml
neko/: __init__.py  __main__.py  neko.py
neko/core/: schedule.py
neko/core/messages/: __init__.py  messages.py
neko/enums/: __init__.py  antispam_type.py  auto_name.py  member_status.py
neko/models/: __init__.py  afk.py  antispam.py  filters.py  greetings_db.py  members.py  notes.py
neko/plugins/: __init__.py  admins.py  afk.py  antispam.py  chat_overview.py  dev.py  filters.py  formatting.py  greetings.py  handler.py  misc.py  notes.py  promoted.py  purge.py  restrict.py  start.py  tag_logger.py
neko/utils/: filters.py  func.py  misc.py  misc_bttn.py  time.py
