[tool.poetry]
name = "Neko-Chan"
version = "0.1.0"
description = "I am a bot based on PyroFork"
authors = ["Ling-ex <none>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "~=3.9"
pyrofork = "^2.3.45"
TgCrypto-pyrofork = "^1.2.6"
uvloop = "0.20.0"
motor = "^3.5.1"
pydantic-settings = "2.2.1"
pydantic-core = "2.16.3"
colorlog = "^6.8.0"
meval = "^2.5"
APScheduler = "^3.10.4"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
